Error handling, formatting, small fixes/additions, version 0.4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 * 2015-06-05 tastytea <tastytea@tastytea.de>
+	Version 0.4
+	Error handling
+* 2015-06-05 tastytea <tastytea@tastytea.de>
 	Version 0.3
 	Recovery
 * 2015-06-03 tastytea <tastytea@tastytea.de>
