--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,6 @@
 * 2015-06-05 tastytea <tastytea@tastytea.de>
+	Changed to be not interactive while checking to work with systemd
+* 2015-06-05 tastytea <tastytea@tastytea.de>
 	Version 0.4
 	Error handling
 * 2015-06-05 tastytea <tastytea@tastytea.de>
