--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* 2015-06-11 tastytea <tastytea@tastytea.de>
+	Critical bug fixes
+	Version 0.6
 * 2015-06-08 tastytea <tastytea@tastytea.de>
 	Bug fixes
 	Version 0.5
