--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
 * Make sure you have sha*sum or md5sum installed
 * Make hashboot.sh executable
-* Place hashboot.sh where it's needed
+* Place hashboot.sh anywhere in $PATH
 * Install the appropriate init script
