--- a/TODO
+++ b/TODO
@@ -2,3 +2,5 @@
 * Ubuntu package
 * Supress dd output while staying Debian 7 compatible
 * Find out if we are raspbian compatible (first partition starts at 4MiB)
+* Debian and Ubuntu repositories
+* /etc/kernel/postinst.d hook (Debian und Ubuntu)
