--- a/TODO
+++ b/TODO
@@ -2,3 +2,4 @@
 * Ubuntu package
 * Supress dd output while staying Debian 7 compatible
 * Debian and Ubuntu repositories
+* Make Ubuntu 14.04 initscript work
