--- a/README
+++ b/README
@@ -1,3 +1,9 @@
+"THE HUG-WARE LICENSE" (Revision 1):
+xo <xo@rotce.de> and tastytea <tastytea@tastytea.de> wrote these files. As long
+as you retain this notice you can do whatever you want with this stuff. If we
+meet some day, and you think this stuff is worth it, you can give us a hug.
+
+
 For build instruction see INSTALL.
 
 Run "hashboot.sh index" to generate checksums and a backup for /boot and MBR
