--- a/README
+++ b/README
@@ -12,4 +12,6 @@ Run "hashboot.sh recover" to replace corrupted files with the backup
 
 A backup is stored in /var/cache/bootbackup.tar.gz
 
+You can't use the openrc/sysv init scripts with parallel boot.
+
 Detailed documentation is in the sourcecode.
