More readme updates

--- a/README
+++ b/README
@@ -6,9 +6,9 @@ meet some day, and you think this stuff is worth it, you can give us a hug.
 
 For build instruction see INSTALL.
 
-Run "hashboot.sh index" to generate checksums and a backup for /boot and MBR
-Run "hashboot.sh check" to check /boot and MBR
-Run "hashboot.sh recover" to replace corrupted files with the backup
+Run "hashboot index" to generate checksums and a backup for /boot and MBR
+Run "hashboot check" to check /boot and MBR
+Run "hashboot recover" to replace corrupted files with the backup
 
 A backup is per default stored in /var/cache/bootbackup.tar.gz
 
