--- a/INSTALL
+++ b/INSTALL
@@ -1,5 +1,5 @@
-* Make hashboot.sh executable
-* Place hashboot.sh anywhere in $PATH
+* Make hashboot executable
+* Place hashboot anywhere in $PATH
 * Install the appropriate init script
 * If applicable, copy kernel-hook to /etc/kernel/post{inst,rm}.d/zzz-hashboot (make sure it is called after all other hooks)
 
